@@ -1,4 +1,8 @@
-2008-08-14  Bojan Rajkovic  <bojanr@brandeis.edu.
+2008-08-14  Jonathan Pryor  <jpryor@novell.com>
+
+	* Tuple.cs, Tuples.cs: Remove some Gendarme warnings.
+
+2008-08-14  Bojan Rajkovic  <bojanr@brandeis.edu>
 
 	* String.cs: Added convenience regex methods: Matches,
 	  Captures and NamedCaptures.
